welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:3: error: ';' expected but 'return' found.
  if (isMorning==true){if (isMom==true){return true}return false}
                                                    ^